Bug 742194 part 1.  Add support for throwing uncatchable exceptions to Web IDL bindings.  People keep asking for this.  r=khuey